// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`compile literals 1`] = `
Block {
  "col": 0,
  "expressions": [
    Literal {
      "col": 0,
      "line": 0,
      "type": "Int",
      "value": "1",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile literals 2`] = `
"// PROGRAM //
(() => {
    return BigInt(1);
})()"
`;

exports[`compile literals 3`] = `
Block {
  "col": 0,
  "expressions": [
    Literal {
      "col": 0,
      "line": 0,
      "type": "Float",
      "value": "1.23",
    },
  ],
  "line": 0,
  "type": "Float",
}
`;

exports[`compile literals 4`] = `
"// PROGRAM //
(() => {
    return 1.23;
})()"
`;

exports[`compile literals 5`] = `
Block {
  "col": 0,
  "expressions": [
    Literal {
      "col": 0,
      "line": 0,
      "type": "Bool",
      "value": "true",
    },
  ],
  "line": 0,
  "type": "Bool",
}
`;

exports[`compile literals 6`] = `
"// PROGRAM //
(() => {
    return true;
})()"
`;

exports[`compile literals 7`] = `
Block {
  "col": 0,
  "expressions": [
    Literal {
      "col": 0,
      "line": 0,
      "type": "Bool",
      "value": "false",
    },
  ],
  "line": 0,
  "type": "Bool",
}
`;

exports[`compile literals 8`] = `
"// PROGRAM //
(() => {
    return false;
})()"
`;

exports[`compile literals 9`] = `
Block {
  "col": 0,
  "expressions": [
    Literal {
      "col": 0,
      "line": 0,
      "type": "Str",
      "value": ""hello"",
    },
  ],
  "line": 0,
  "type": "Str",
}
`;

exports[`compile literals 10`] = `
"// PROGRAM //
(() => {
    return "hello";
})()"
`;

exports[`compile binary expressions 1`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 2,
      "left": Literal {
        "col": 0,
        "line": 0,
        "type": "Int",
        "value": "1",
      },
      "line": 0,
      "operator": "+",
      "right": Literal {
        "col": 4,
        "line": 0,
        "type": "Int",
        "value": "2",
      },
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile binary expressions 2`] = `
"// PROGRAM //
(() => {
    return (BigInt(1) + BigInt(2));
})()"
`;

exports[`compile binary expressions 3`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 2,
      "left": Literal {
        "col": 0,
        "line": 0,
        "type": "Int",
        "value": "1",
      },
      "line": 0,
      "operator": "-",
      "right": Literal {
        "col": 4,
        "line": 0,
        "type": "Int",
        "value": "2",
      },
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile binary expressions 4`] = `
"// PROGRAM //
(() => {
    return (BigInt(1) - BigInt(2));
})()"
`;

exports[`compile binary expressions 5`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 2,
      "left": Literal {
        "col": 0,
        "line": 0,
        "type": "Int",
        "value": "1",
      },
      "line": 0,
      "operator": "*",
      "right": Literal {
        "col": 4,
        "line": 0,
        "type": "Int",
        "value": "2",
      },
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile binary expressions 6`] = `
"// PROGRAM //
(() => {
    return (BigInt(1) * BigInt(2));
})()"
`;

exports[`compile binary expressions 7`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 2,
      "left": Literal {
        "col": 0,
        "line": 0,
        "type": "Int",
        "value": "1",
      },
      "line": 0,
      "operator": "/",
      "right": Literal {
        "col": 4,
        "line": 0,
        "type": "Int",
        "value": "2",
      },
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile binary expressions 8`] = `
"// PROGRAM //
(() => {
    return (BigInt(1) / BigInt(2));
})()"
`;

exports[`compile binary expressions 9`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 12,
      "left": Binary {
        "col": 2,
        "left": Literal {
          "col": 0,
          "line": 0,
          "type": "Int",
          "value": "3",
        },
        "line": 0,
        "operator": "*",
        "right": Binary {
          "col": 7,
          "left": Literal {
            "col": 5,
            "line": 0,
            "type": "Int",
            "value": "1",
          },
          "line": 0,
          "operator": "+",
          "right": Literal {
            "col": 9,
            "line": 0,
            "type": "Int",
            "value": "3",
          },
          "type": "Int",
        },
        "type": "Int",
      },
      "line": 0,
      "operator": "/",
      "right": Literal {
        "col": 14,
        "line": 0,
        "type": "Int",
        "value": "2",
      },
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile binary expressions 10`] = `
"// PROGRAM //
(() => {
    return ((BigInt(3) * (BigInt(1) + BigInt(3))) / BigInt(2));
})()"
`;

exports[`compile binary expressions 11`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 2,
      "left": Literal {
        "col": 0,
        "line": 0,
        "type": "Int",
        "value": "5",
      },
      "line": 0,
      "operator": "%",
      "right": Literal {
        "col": 4,
        "line": 0,
        "type": "Int",
        "value": "3",
      },
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile binary expressions 12`] = `
"// BUILTIN FUNCTIONS //
function __MOD__(a, b) {
    return ((a % b) + b) % b;
}

// PROGRAM //
(() => {
    return __MOD__(BigInt(5), BigInt(3));
})()"
`;

exports[`compile binary expressions 13`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 3,
      "left": Unary {
        "child": Literal {
          "col": 1,
          "line": 0,
          "type": "Int",
          "value": "5",
        },
        "col": 0,
        "line": 0,
        "operator": "-",
        "type": "Int",
      },
      "line": 0,
      "operator": "%",
      "right": Literal {
        "col": 5,
        "line": 0,
        "type": "Int",
        "value": "3",
      },
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile binary expressions 14`] = `
"// BUILTIN FUNCTIONS //
function __MOD__(a, b) {
    return ((a % b) + b) % b;
}

// PROGRAM //
(() => {
    return __MOD__((-BigInt(5)), BigInt(3));
})()"
`;

exports[`compile binary expressions 15`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 5,
      "left": Literal {
        "col": 0,
        "line": 0,
        "type": "Bool",
        "value": "true",
      },
      "line": 0,
      "operator": "and",
      "right": Literal {
        "col": 9,
        "line": 0,
        "type": "Bool",
        "value": "false",
      },
      "type": "Bool",
    },
  ],
  "line": 0,
  "type": "Bool",
}
`;

exports[`compile binary expressions 16`] = `
"// PROGRAM //
(() => {
    return (true && false);
})()"
`;

exports[`compile binary expressions 17`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 5,
      "left": Literal {
        "col": 0,
        "line": 0,
        "type": "Bool",
        "value": "true",
      },
      "line": 0,
      "operator": "or",
      "right": Literal {
        "col": 8,
        "line": 0,
        "type": "Bool",
        "value": "false",
      },
      "type": "Bool",
    },
  ],
  "line": 0,
  "type": "Bool",
}
`;

exports[`compile binary expressions 18`] = `
"// PROGRAM //
(() => {
    return (true || false);
})()"
`;

exports[`compile binary expressions 19`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 2,
      "left": Literal {
        "col": 0,
        "line": 0,
        "type": "Int",
        "value": "1",
      },
      "line": 0,
      "operator": "==",
      "right": Literal {
        "col": 5,
        "line": 0,
        "type": "Int",
        "value": "1",
      },
      "type": "Bool",
    },
  ],
  "line": 0,
  "type": "Bool",
}
`;

exports[`compile binary expressions 20`] = `
"// PROGRAM //
(() => {
    return (BigInt(1) == BigInt(1));
})()"
`;

exports[`compile binary expressions 21`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 2,
      "left": Literal {
        "col": 0,
        "line": 0,
        "type": "Int",
        "value": "1",
      },
      "line": 0,
      "operator": "!=",
      "right": Literal {
        "col": 5,
        "line": 0,
        "type": "Int",
        "value": "1",
      },
      "type": "Bool",
    },
  ],
  "line": 0,
  "type": "Bool",
}
`;

exports[`compile binary expressions 22`] = `
"// PROGRAM //
(() => {
    return (BigInt(1) != BigInt(1));
})()"
`;

exports[`compile binary expressions 23`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 8,
      "left": Binary {
        "col": 3,
        "left": Literal {
          "col": 1,
          "line": 0,
          "type": "Int",
          "value": "1",
        },
        "line": 0,
        "operator": ">",
        "right": Literal {
          "col": 5,
          "line": 0,
          "type": "Int",
          "value": "2",
        },
        "type": "Bool",
      },
      "line": 0,
      "operator": "and",
      "right": Binary {
        "col": 15,
        "left": Literal {
          "col": 13,
          "line": 0,
          "type": "Int",
          "value": "3",
        },
        "line": 0,
        "operator": "<",
        "right": Literal {
          "col": 17,
          "line": 0,
          "type": "Int",
          "value": "4",
        },
        "type": "Bool",
      },
      "type": "Bool",
    },
  ],
  "line": 0,
  "type": "Bool",
}
`;

exports[`compile binary expressions 24`] = `
"// PROGRAM //
(() => {
    return ((BigInt(1) > BigInt(2)) && (BigInt(3) < BigInt(4)));
})()"
`;

exports[`compile binary expressions 25`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 8,
      "left": Binary {
        "col": 3,
        "left": Literal {
          "col": 1,
          "line": 0,
          "type": "Int",
          "value": "1",
        },
        "line": 0,
        "operator": ">",
        "right": Literal {
          "col": 5,
          "line": 0,
          "type": "Int",
          "value": "2",
        },
        "type": "Bool",
      },
      "line": 0,
      "operator": "or",
      "right": Binary {
        "col": 14,
        "left": Literal {
          "col": 12,
          "line": 0,
          "type": "Int",
          "value": "3",
        },
        "line": 0,
        "operator": "<",
        "right": Literal {
          "col": 16,
          "line": 0,
          "type": "Int",
          "value": "4",
        },
        "type": "Bool",
      },
      "type": "Bool",
    },
  ],
  "line": 0,
  "type": "Bool",
}
`;

exports[`compile binary expressions 26`] = `
"// PROGRAM //
(() => {
    return ((BigInt(1) > BigInt(2)) || (BigInt(3) < BigInt(4)));
})()"
`;

exports[`compile block 1`] = `
Block {
  "col": 0,
  "expressions": [
    Block {
      "col": 0,
      "expressions": [
        Literal {
          "col": 2,
          "line": 0,
          "type": "Int",
          "value": "1",
        },
      ],
      "line": 0,
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile block 2`] = `
"// PROGRAM //
(() => {
    return (() => {
        return BigInt(1);
    })();
})()"
`;

exports[`compile block 3`] = `
Block {
  "col": 0,
  "expressions": [
    Binary {
      "col": 2,
      "left": Literal {
        "col": 0,
        "line": 0,
        "type": "Int",
        "value": "1",
      },
      "line": 0,
      "operator": "+",
      "right": Block {
        "col": 4,
        "expressions": [
          Literal {
            "col": 6,
            "line": 0,
            "type": "Int",
            "value": "1",
          },
        ],
        "line": 0,
        "type": "Int",
      },
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile block 4`] = `
"// PROGRAM //
(() => {
    return (BigInt(1) + (() => {
        return BigInt(1);
    })());
})()"
`;

exports[`compile block 5`] = `
Block {
  "col": 0,
  "expressions": [
    Block {
      "col": 0,
      "expressions": [
        DropValue {
          "child": Literal {
            "col": 2,
            "line": 0,
            "type": "Int",
            "value": "1",
          },
          "col": 2,
          "line": 0,
          "type": "Null",
        },
      ],
      "line": 0,
      "type": "Null",
    },
  ],
  "line": 0,
  "type": "Null",
}
`;

exports[`compile block 6`] = `
"// PROGRAM //
(() => {
    return (() => {
        BigInt(1);
        return null;
    })();
})()"
`;

exports[`compile block 7`] = `
Block {
  "col": 12,
  "expressions": [
    Binary {
      "col": 22,
      "left": Binary {
        "col": 17,
        "left": Unary {
          "child": Literal {
            "col": 14,
            "line": 1,
            "type": "Int",
            "value": "32",
          },
          "col": 13,
          "line": 1,
          "operator": "-",
          "type": "Int",
        },
        "line": 1,
        "operator": "/",
        "right": Literal {
          "col": 19,
          "line": 1,
          "type": "Int",
          "value": "4",
        },
        "type": "Int",
      },
      "line": 1,
      "operator": "%",
      "right": Block {
        "col": 24,
        "expressions": [
          Binary {
            "col": 28,
            "left": Literal {
              "col": 26,
              "line": 1,
              "type": "Int",
              "value": "1",
            },
            "line": 1,
            "operator": "+",
            "right": Literal {
              "col": 30,
              "line": 1,
              "type": "Int",
              "value": "2",
            },
            "type": "Int",
          },
        ],
        "line": 1,
        "type": "Int",
      },
      "type": "Int",
    },
  ],
  "line": 1,
  "type": "Int",
}
`;

exports[`compile block 8`] = `
"// BUILTIN FUNCTIONS //
function __MOD__(a, b) {
    return ((a % b) + b) % b;
}

// PROGRAM //
(() => {
    return __MOD__(((-BigInt(32)) / BigInt(4)), (() => {
        return (BigInt(1) + BigInt(2));
    })());
})()"
`;

exports[`compile variables 1`] = `
Block {
  "col": 12,
  "expressions": [
    Assignment {
      "col": 12,
      "isDropped": true,
      "line": 1,
      "name": "x",
      "type": "Null",
      "value": Literal {
        "col": 16,
        "line": 1,
        "type": "Float",
        "value": "1.2",
      },
    },
    Assignment {
      "col": 12,
      "isDropped": true,
      "line": 2,
      "name": "y",
      "type": "Null",
      "value": Block {
        "col": 16,
        "expressions": [
          Literal {
            "col": 18,
            "line": 2,
            "type": "Float",
            "value": "2.3",
          },
        ],
        "line": 2,
        "type": "Float",
      },
    },
    Binary {
      "col": 14,
      "left": Variable {
        "col": 12,
        "fullName": "x",
        "line": 3,
        "name": "x",
        "templateTypes": [],
        "type": "Float",
      },
      "line": 3,
      "operator": "+",
      "right": Variable {
        "col": 16,
        "fullName": "y",
        "line": 3,
        "name": "y",
        "templateTypes": [],
        "type": "Float",
      },
      "type": "Float",
    },
  ],
  "line": 1,
  "type": "Float",
}
`;

exports[`compile variables 2`] = `
"// PROGRAM //
(() => {
    let x;
    let y;
    x = 1.2;
    y = (() => {
        return 2.3;
    })();
    return (x + y);
})()"
`;

exports[`compile variables 3`] = `
Block {
  "col": 12,
  "expressions": [
    Assignment {
      "col": 12,
      "isDropped": true,
      "line": 1,
      "name": "x",
      "type": "Null",
      "value": Literal {
        "col": 16,
        "line": 1,
        "type": "Float",
        "value": "1.2",
      },
    },
    Assignment {
      "col": 12,
      "isDropped": false,
      "line": 2,
      "name": "y",
      "type": "Float",
      "value": Block {
        "col": 16,
        "expressions": [
          Literal {
            "col": 18,
            "line": 2,
            "type": "Float",
            "value": "2.3",
          },
        ],
        "line": 2,
        "type": "Float",
      },
    },
    Assignment {
      "col": 12,
      "isDropped": false,
      "line": 3,
      "name": "x",
      "type": "Float",
      "value": Binary {
        "col": 18,
        "left": Variable {
          "col": 16,
          "fullName": "x",
          "line": 3,
          "name": "x",
          "templateTypes": [],
          "type": "Float",
        },
        "line": 3,
        "operator": "+",
        "right": Variable {
          "col": 20,
          "fullName": "y",
          "line": 3,
          "name": "y",
          "templateTypes": [],
          "type": "Float",
        },
        "type": "Float",
      },
    },
  ],
  "line": 1,
  "type": "Float",
}
`;

exports[`compile variables 4`] = `
"// PROGRAM //
(() => {
    let x;
    let y;
    x = 1.2;
    (() => { y = (() => {
        return 2.3;
    })(); return y; })();
    return (() => { x = (x + y); return x; })();
})()"
`;

exports[`compile if expressions 1`] = `
Block {
  "col": 0,
  "expressions": [
    If {
      "col": 0,
      "conditionalBranches": [
        {
          "branch": Block {
            "col": 8,
            "expressions": [
              Literal {
                "col": 10,
                "line": 0,
                "type": "Int",
                "value": "1",
              },
            ],
            "line": 0,
            "type": "Int",
          },
          "condition": Literal {
            "col": 3,
            "line": 0,
            "type": "Bool",
            "value": "true",
          },
        },
      ],
      "elseBranch": Block {
        "col": 19,
        "expressions": [
          Literal {
            "col": 21,
            "line": 0,
            "type": "Int",
            "value": "2",
          },
        ],
        "line": 0,
        "type": "Int",
      },
      "line": 0,
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile if expressions 2`] = `
"// PROGRAM //
(() => {
    return (() => {
        if (true) {
            return BigInt(1);
        } else {
            return BigInt(2);
        }
    })();
})()"
`;

exports[`compile if expressions 3`] = `
Block {
  "col": 0,
  "expressions": [
    If {
      "col": 0,
      "conditionalBranches": [
        {
          "branch": Block {
            "col": 9,
            "expressions": [
              Literal {
                "col": 11,
                "line": 0,
                "type": "Int",
                "value": "1",
              },
            ],
            "line": 0,
            "type": "Int",
          },
          "condition": Literal {
            "col": 3,
            "line": 0,
            "type": "Bool",
            "value": "false",
          },
        },
      ],
      "elseBranch": Block {
        "col": 20,
        "expressions": [
          Literal {
            "col": 22,
            "line": 0,
            "type": "Int",
            "value": "2",
          },
        ],
        "line": 0,
        "type": "Int",
      },
      "line": 0,
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile if expressions 4`] = `
"// PROGRAM //
(() => {
    return (() => {
        if (false) {
            return BigInt(1);
        } else {
            return BigInt(2);
        }
    })();
})()"
`;

exports[`compile if expressions 5`] = `
Block {
  "col": 0,
  "expressions": [
    If {
      "col": 0,
      "conditionalBranches": [
        {
          "branch": Block {
            "col": 10,
            "expressions": [
              Literal {
                "col": 12,
                "line": 0,
                "type": "Int",
                "value": "1",
              },
            ],
            "line": 0,
            "type": "Int",
          },
          "condition": Binary {
            "col": 5,
            "left": Literal {
              "col": 3,
              "line": 0,
              "type": "Int",
              "value": "1",
            },
            "line": 0,
            "operator": "==",
            "right": Literal {
              "col": 8,
              "line": 0,
              "type": "Int",
              "value": "1",
            },
            "type": "Bool",
          },
        },
      ],
      "elseBranch": Block {
        "col": 21,
        "expressions": [
          Literal {
            "col": 23,
            "line": 0,
            "type": "Int",
            "value": "2",
          },
        ],
        "line": 0,
        "type": "Int",
      },
      "line": 0,
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile if expressions 6`] = `
"// PROGRAM //
(() => {
    return (() => {
        if ((BigInt(1) == BigInt(1))) {
            return BigInt(1);
        } else {
            return BigInt(2);
        }
    })();
})()"
`;

exports[`compile if expressions 7`] = `
Block {
  "col": 0,
  "expressions": [
    If {
      "col": 0,
      "conditionalBranches": [
        {
          "branch": Block {
            "col": 10,
            "expressions": [
              Literal {
                "col": 12,
                "line": 0,
                "type": "Int",
                "value": "1",
              },
            ],
            "line": 0,
            "type": "Int",
          },
          "condition": Binary {
            "col": 5,
            "left": Literal {
              "col": 3,
              "line": 0,
              "type": "Int",
              "value": "1",
            },
            "line": 0,
            "operator": "==",
            "right": Literal {
              "col": 8,
              "line": 0,
              "type": "Int",
              "value": "2",
            },
            "type": "Bool",
          },
        },
      ],
      "elseBranch": Block {
        "col": 21,
        "expressions": [
          Literal {
            "col": 23,
            "line": 0,
            "type": "Int",
            "value": "2",
          },
        ],
        "line": 0,
        "type": "Int",
      },
      "line": 0,
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile if expressions 8`] = `
"// PROGRAM //
(() => {
    return (() => {
        if ((BigInt(1) == BigInt(2))) {
            return BigInt(1);
        } else {
            return BigInt(2);
        }
    })();
})()"
`;

exports[`compile if expressions 9`] = `
Block {
  "col": 8,
  "expressions": [
    Assignment {
      "col": 8,
      "isDropped": true,
      "line": 1,
      "name": "x",
      "type": "Null",
      "value": Literal {
        "col": 12,
        "line": 1,
        "type": "Int",
        "value": "1",
      },
    },
    If {
      "col": 8,
      "conditionalBranches": [
        {
          "branch": Block {
            "col": 16,
            "expressions": [
              Assignment {
                "col": 12,
                "isDropped": true,
                "line": 3,
                "name": "x",
                "type": "Null",
                "value": Literal {
                  "col": 16,
                  "line": 3,
                  "type": "Int",
                  "value": "2",
                },
              },
            ],
            "line": 2,
            "type": "Null",
          },
          "condition": Literal {
            "col": 11,
            "line": 2,
            "type": "Bool",
            "value": "true",
          },
        },
      ],
      "elseBranch": Block {
        "col": 15,
        "expressions": [
          Assignment {
            "col": 12,
            "isDropped": true,
            "line": 5,
            "name": "x",
            "type": "Null",
            "value": Literal {
              "col": 16,
              "line": 5,
              "type": "Int",
              "value": "3",
            },
          },
        ],
        "line": 4,
        "type": "Null",
      },
      "line": 2,
      "type": "Null",
    },
    Variable {
      "col": 8,
      "fullName": "x",
      "line": 7,
      "name": "x",
      "templateTypes": [],
      "type": "Int",
    },
  ],
  "line": 1,
  "type": "Int",
}
`;

exports[`compile if expressions 10`] = `
"// PROGRAM //
(() => {
    let x;
    x = BigInt(1);
    (() => {
        if (true) {
            let x;
            return x = BigInt(2);
        } else {
            let x;
            return x = BigInt(3);
        }
    })();
    return x;
})()"
`;

exports[`compile if expressions 11`] = `
Block {
  "col": 8,
  "expressions": [
    If {
      "col": 8,
      "conditionalBranches": [
        {
          "branch": Block {
            "col": 17,
            "expressions": [
              Literal {
                "col": 12,
                "line": 2,
                "type": "Int",
                "value": "0",
              },
            ],
            "line": 1,
            "type": "Int",
          },
          "condition": Literal {
            "col": 11,
            "line": 1,
            "type": "Bool",
            "value": "false",
          },
        },
        {
          "branch": Block {
            "col": 22,
            "expressions": [
              Literal {
                "col": 12,
                "line": 5,
                "type": "Int",
                "value": "1",
              },
            ],
            "line": 4,
            "type": "Int",
          },
          "condition": Binary {
            "col": 18,
            "left": Literal {
              "col": 16,
              "line": 4,
              "type": "Int",
              "value": "1",
            },
            "line": 4,
            "operator": ">",
            "right": Literal {
              "col": 20,
              "line": 4,
              "type": "Int",
              "value": "0",
            },
            "type": "Bool",
          },
        },
      ],
      "elseBranch": Block {
        "col": 13,
        "expressions": [
          Literal {
            "col": 12,
            "line": 8,
            "type": "Int",
            "value": "2",
          },
        ],
        "line": 7,
        "type": "Int",
      },
      "line": 1,
      "type": "Int",
    },
  ],
  "line": 1,
  "type": "Int",
}
`;

exports[`compile if expressions 12`] = `
"// PROGRAM //
(() => {
    return (() => {
        if (false) {
            return BigInt(0);
        } else if ((BigInt(1) > BigInt(0))) {
            return BigInt(1);
        } else {
            return BigInt(2);
        }
    })();
})()"
`;

exports[`compile functions 1`] = `
Block {
  "col": 0,
  "expressions": [
    DropValue {
      "child": Function {
        "body": Block {
          "col": 33,
          "expressions": [
            Binary {
              "col": 37,
              "left": Variable {
                "col": 35,
                "fullName": "a",
                "line": 0,
                "name": "a",
                "templateTypes": [],
                "type": "Int",
              },
              "line": 0,
              "operator": "+",
              "right": Variable {
                "col": 39,
                "fullName": "b",
                "line": 0,
                "name": "b",
                "templateTypes": [],
                "type": "Int",
              },
              "type": "Int",
            },
          ],
          "line": 0,
          "type": "Int",
        },
        "col": 0,
        "fullName": "myFunc$Int$Int",
        "line": 0,
        "name": "myFunc",
        "params": [
          {
            "name": "a",
            "type": "Int",
          },
          {
            "name": "b",
            "type": "Int",
          },
        ],
        "returnType": "Int",
        "type": FuncType {
          "paramTypes": [
            "Int",
            "Int",
          ],
          "returnType": "Int",
        },
      },
      "col": 0,
      "line": 0,
      "type": "Null",
    },
    Call {
      "args": [
        Literal {
          "col": 51,
          "line": 0,
          "type": "Int",
          "value": "1",
        },
        Literal {
          "col": 54,
          "line": 0,
          "type": "Int",
          "value": "2",
        },
      ],
      "callerType": FuncType {
        "paramTypes": [
          "Int",
          "Int",
        ],
        "returnType": "Int",
      },
      "col": 44,
      "fullName": "myFunc$Int$Int",
      "line": 0,
      "name": "myFunc",
      "referToByName": "full",
      "type": "Int",
    },
  ],
  "line": 0,
  "type": "Int",
}
`;

exports[`compile functions 2`] = `
"// PROGRAM //
(() => {
    function myFunc$Int$Int(a, b) {
        return (a + b);
    };
    return myFunc$Int$Int(BigInt(1), BigInt(2));
})()"
`;

exports[`compile recursive functions 1`] = `
Block {
  "col": 8,
  "expressions": [
    Function {
      "body": Block {
        "col": 36,
        "expressions": [
          If {
            "col": 12,
            "conditionalBranches": [
              {
                "branch": Block {
                  "col": 22,
                  "expressions": [
                    Literal {
                      "col": 16,
                      "line": 3,
                      "type": "Int",
                      "value": "1",
                    },
                  ],
                  "line": 2,
                  "type": "Int",
                },
                "condition": Binary {
                  "col": 17,
                  "left": Variable {
                    "col": 15,
                    "fullName": "n",
                    "line": 2,
                    "name": "n",
                    "templateTypes": [],
                    "type": "Int",
                  },
                  "line": 2,
                  "operator": "<=",
                  "right": Literal {
                    "col": 20,
                    "line": 2,
                    "type": "Int",
                    "value": "1",
                  },
                  "type": "Bool",
                },
              },
            ],
            "elseBranch": Block {
              "col": 19,
              "expressions": [
                Binary {
                  "col": 18,
                  "left": Variable {
                    "col": 16,
                    "fullName": "n",
                    "line": 5,
                    "name": "n",
                    "templateTypes": [],
                    "type": "Int",
                  },
                  "line": 5,
                  "operator": "*",
                  "right": Call {
                    "args": [
                      Binary {
                        "col": 32,
                        "left": Variable {
                          "col": 30,
                          "fullName": "n",
                          "line": 5,
                          "name": "n",
                          "templateTypes": [],
                          "type": "Int",
                        },
                        "line": 5,
                        "operator": "-",
                        "right": Literal {
                          "col": 34,
                          "line": 5,
                          "type": "Int",
                          "value": "1",
                        },
                        "type": "Int",
                      },
                    ],
                    "callerType": FuncType {
                      "paramTypes": [
                        "Int",
                      ],
                      "returnType": "Int",
                    },
                    "col": 20,
                    "fullName": "factorial$Int",
                    "line": 5,
                    "name": "factorial",
                    "referToByName": "full",
                    "type": "Int",
                  },
                  "type": "Int",
                },
              ],
              "line": 4,
              "type": "Int",
            },
            "line": 2,
            "type": "Int",
          },
        ],
        "line": 1,
        "type": "Int",
      },
      "col": 8,
      "fullName": "factorial$Int",
      "line": 1,
      "name": "factorial",
      "params": [
        {
          "name": "n",
          "type": "Int",
        },
      ],
      "returnType": "Int",
      "type": FuncType {
        "paramTypes": [
          "Int",
        ],
        "returnType": "Int",
      },
    },
    Call {
      "args": [
        Literal {
          "col": 18,
          "line": 9,
          "type": "Int",
          "value": "4",
        },
      ],
      "callerType": FuncType {
        "paramTypes": [
          "Int",
        ],
        "returnType": "Int",
      },
      "col": 8,
      "fullName": "factorial$Int",
      "line": 9,
      "name": "factorial",
      "referToByName": "full",
      "type": "Int",
    },
  ],
  "line": 1,
  "type": "Int",
}
`;

exports[`compile recursive functions 2`] = `
"// PROGRAM //
(() => {
    function factorial$Int(n) {
        return (() => {
            if ((n <= BigInt(1))) {
                return BigInt(1);
            } else {
                return (n * factorial$Int((n - BigInt(1))));
            }
        })();
    };
    return factorial$Int(BigInt(4));
})()"
`;

exports[`compile functions as variables 1`] = `
Block {
  "col": 8,
  "expressions": [
    Function {
      "body": Block {
        "col": 24,
        "expressions": [
          Literal {
            "col": 12,
            "line": 2,
            "type": "Int",
            "value": "1",
          },
        ],
        "line": 1,
        "type": "Int",
      },
      "col": 8,
      "fullName": "foo$",
      "line": 1,
      "name": "foo",
      "params": [],
      "returnType": "Int",
      "type": FuncType {
        "paramTypes": [],
        "returnType": "Int",
      },
    },
    Assignment {
      "col": 8,
      "isDropped": true,
      "line": 4,
      "name": "x",
      "type": "Null",
      "value": Variable {
        "col": 12,
        "fullName": "foo$",
        "line": 4,
        "name": "foo",
        "templateTypes": [],
        "type": FuncType {
          "paramTypes": [],
          "returnType": "Int",
        },
      },
    },
    Assignment {
      "col": 8,
      "isDropped": true,
      "line": 5,
      "name": "y",
      "type": "Null",
      "value": Variable {
        "col": 12,
        "fullName": "foo$",
        "line": 5,
        "name": "foo",
        "templateTypes": [],
        "type": FuncType {
          "paramTypes": [],
          "returnType": "Int",
        },
      },
    },
    Binary {
      "col": 12,
      "left": Call {
        "args": [],
        "callerType": FuncType {
          "paramTypes": [],
          "returnType": "Int",
        },
        "col": 8,
        "fullName": "x$",
        "line": 7,
        "name": "x",
        "referToByName": "abbr",
        "type": "Int",
      },
      "line": 7,
      "operator": "+",
      "right": Call {
        "args": [],
        "callerType": FuncType {
          "paramTypes": [],
          "returnType": "Int",
        },
        "col": 14,
        "fullName": "y$",
        "line": 7,
        "name": "y",
        "referToByName": "abbr",
        "type": "Int",
      },
      "type": "Int",
    },
  ],
  "line": 1,
  "type": "Int",
}
`;

exports[`compile functions as variables 2`] = `
"// PROGRAM //
(() => {
    let x;
    let y;
    function foo$() {
        return BigInt(1);
    };
    x = foo$;
    y = foo$;
    return (x() + y());
})()"
`;

exports[`compile functions as variables 3`] = `
Block {
  "col": 8,
  "expressions": [
    Function {
      "body": Block {
        "col": 30,
        "expressions": [
          Variable {
            "col": 12,
            "fullName": "a",
            "line": 2,
            "name": "a",
            "templateTypes": [],
            "type": "Int",
          },
        ],
        "line": 1,
        "type": "Int",
      },
      "col": 8,
      "fullName": "foo$Int",
      "line": 1,
      "name": "foo",
      "params": [
        {
          "name": "a",
          "type": "Int",
        },
      ],
      "returnType": "Int",
      "type": FuncType {
        "paramTypes": [
          "Int",
        ],
        "returnType": "Int",
      },
    },
    Assignment {
      "col": 8,
      "isDropped": true,
      "line": 4,
      "name": "x",
      "type": "Null",
      "value": Variable {
        "col": 12,
        "fullName": "foo$Int",
        "line": 4,
        "name": "foo",
        "templateTypes": [
          "Int",
        ],
        "type": FuncType {
          "paramTypes": [
            "Int",
          ],
          "returnType": "Int",
        },
      },
    },
    Call {
      "args": [
        Literal {
          "col": 10,
          "line": 5,
          "type": "Int",
          "value": "1",
        },
      ],
      "callerType": FuncType {
        "paramTypes": [
          "Int",
        ],
        "returnType": "Int",
      },
      "col": 8,
      "fullName": "x$Int",
      "line": 5,
      "name": "x",
      "referToByName": "abbr",
      "type": "Int",
    },
  ],
  "line": 1,
  "type": "Int",
}
`;

exports[`compile functions as variables 4`] = `
"// PROGRAM //
(() => {
    let x;
    function foo$Int(a) {
        return a;
    };
    x = foo$Int;
    return x(BigInt(1));
})()"
`;

exports[`compile functions as variables 5`] = `
Block {
  "col": 12,
  "expressions": [
    Function {
      "body": Block {
        "col": 54,
        "expressions": [
          Call {
            "args": [
              Variable {
                "col": 18,
                "fullName": "x",
                "line": 2,
                "name": "x",
                "templateTypes": [],
                "type": "Int",
              },
            ],
            "callerType": FuncType {
              "paramTypes": [
                "Int",
              ],
              "returnType": "Int",
            },
            "col": 16,
            "fullName": "f$Int",
            "line": 2,
            "name": "f",
            "referToByName": "abbr",
            "type": "Int",
          },
        ],
        "line": 1,
        "type": "Int",
      },
      "col": 12,
      "fullName": "call$Func_Int_Int_$Int",
      "line": 1,
      "name": "call",
      "params": [
        {
          "name": "f",
          "type": FuncType {
            "paramTypes": [
              "Int",
            ],
            "returnType": "Int",
          },
        },
        {
          "name": "x",
          "type": "Int",
        },
      ],
      "returnType": "Int",
      "type": FuncType {
        "paramTypes": [
          FuncType {
            "paramTypes": [
              "Int",
            ],
            "returnType": "Int",
          },
          "Int",
        ],
        "returnType": "Int",
      },
    },
    Function {
      "body": Block {
        "col": 35,
        "expressions": [
          Binary {
            "col": 18,
            "left": Variable {
              "col": 16,
              "fullName": "x",
              "line": 6,
              "name": "x",
              "templateTypes": [],
              "type": "Int",
            },
            "line": 6,
            "operator": "+",
            "right": Literal {
              "col": 20,
              "line": 6,
              "type": "Int",
              "value": "1",
            },
            "type": "Int",
          },
        ],
        "line": 5,
        "type": "Int",
      },
      "col": 12,
      "fullName": "add1$Int",
      "line": 5,
      "name": "add1",
      "params": [
        {
          "name": "x",
          "type": "Int",
        },
      ],
      "returnType": "Int",
      "type": FuncType {
        "paramTypes": [
          "Int",
        ],
        "returnType": "Int",
      },
    },
    Call {
      "args": [
        Variable {
          "col": 17,
          "fullName": "add1$Int",
          "line": 9,
          "name": "add1",
          "templateTypes": [
            "Int",
          ],
          "type": FuncType {
            "paramTypes": [
              "Int",
            ],
            "returnType": "Int",
          },
        },
        Literal {
          "col": 28,
          "line": 9,
          "type": "Int",
          "value": "1",
        },
      ],
      "callerType": FuncType {
        "paramTypes": [
          FuncType {
            "paramTypes": [
              "Int",
            ],
            "returnType": "Int",
          },
          "Int",
        ],
        "returnType": "Int",
      },
      "col": 12,
      "fullName": "call$Func_Int_Int_$Int",
      "line": 9,
      "name": "call",
      "referToByName": "full",
      "type": "Int",
    },
  ],
  "line": 1,
  "type": "Int",
}
`;

exports[`compile functions as variables 6`] = `
"// PROGRAM //
(() => {
    function call$Func_Int_Int_$Int(f, x) {
        return f(x);
    };
    function add1$Int(x) {
        return (x + BigInt(1));
    };
    return call$Func_Int_Int_$Int(add1$Int, BigInt(1));
})()"
`;

exports[`anonymous functions 1`] = `
Block {
  "col": 12,
  "expressions": [
    Assignment {
      "col": 12,
      "isDropped": true,
      "line": 1,
      "name": "f",
      "type": "Null",
      "value": Function {
        "body": Block {
          "col": 42,
          "expressions": [
            Binary {
              "col": 18,
              "left": Variable {
                "col": 16,
                "fullName": "a",
                "line": 2,
                "name": "a",
                "templateTypes": [],
                "type": "Int",
              },
              "line": 2,
              "operator": "+",
              "right": Variable {
                "col": 20,
                "fullName": "b",
                "line": 2,
                "name": "b",
                "templateTypes": [],
                "type": "Int",
              },
              "type": "Int",
            },
          ],
          "line": 1,
          "type": "Int",
        },
        "col": 16,
        "fullName": null,
        "line": 1,
        "name": null,
        "params": [
          {
            "name": "a",
            "type": "Int",
          },
          {
            "name": "b",
            "type": "Int",
          },
        ],
        "returnType": "Int",
        "type": FuncType {
          "paramTypes": [
            "Int",
            "Int",
          ],
          "returnType": "Int",
        },
      },
    },
    Call {
      "args": [
        Literal {
          "col": 14,
          "line": 4,
          "type": "Int",
          "value": "1",
        },
        Literal {
          "col": 17,
          "line": 4,
          "type": "Int",
          "value": "2",
        },
      ],
      "callerType": FuncType {
        "paramTypes": [
          "Int",
          "Int",
        ],
        "returnType": "Int",
      },
      "col": 12,
      "fullName": "f$Int$Int",
      "line": 4,
      "name": "f",
      "referToByName": "abbr",
      "type": "Int",
    },
  ],
  "line": 1,
  "type": "Int",
}
`;

exports[`anonymous functions 2`] = `
"// PROGRAM //
(() => {
    let f;
    f = (a, b) => {
        return (a + b);
    };
    return f(BigInt(1), BigInt(2));
})()"
`;

exports[`allow calling non-variable objects 1`] = `
Block {
  "col": 12,
  "expressions": [
    DirectCall {
      "args": [
        Literal {
          "col": 15,
          "line": 3,
          "type": "Int",
          "value": "1",
        },
        Literal {
          "col": 18,
          "line": 3,
          "type": "Int",
          "value": "2",
        },
      ],
      "caller": Function {
        "body": Block {
          "col": 39,
          "expressions": [
            Binary {
              "col": 18,
              "left": Variable {
                "col": 16,
                "fullName": "a",
                "line": 2,
                "name": "a",
                "templateTypes": [],
                "type": "Int",
              },
              "line": 2,
              "operator": "+",
              "right": Variable {
                "col": 20,
                "fullName": "b",
                "line": 2,
                "name": "b",
                "templateTypes": [],
                "type": "Int",
              },
              "type": "Int",
            },
          ],
          "line": 1,
          "type": "Int",
        },
        "col": 13,
        "fullName": null,
        "line": 1,
        "name": null,
        "params": [
          {
            "name": "a",
            "type": "Int",
          },
          {
            "name": "b",
            "type": "Int",
          },
        ],
        "returnType": "Int",
        "type": FuncType {
          "paramTypes": [
            "Int",
            "Int",
          ],
          "returnType": "Int",
        },
      },
      "col": 13,
      "line": 1,
      "type": "Int",
    },
  ],
  "line": 1,
  "type": "Int",
}
`;

exports[`allow calling non-variable objects 2`] = `
"// PROGRAM //
(() => {
    return ((a, b) => {
        return (a + b);
    })(BigInt(1), BigInt(2));
})()"
`;

exports[`allow calling non-variable objects 3`] = `
Block {
  "col": 12,
  "expressions": [
    Function {
      "body": Block {
        "col": 40,
        "expressions": [
          Function {
            "body": Block {
              "col": 28,
              "expressions": [
                Variable {
                  "col": 20,
                  "fullName": "a",
                  "line": 3,
                  "name": "a",
                  "templateTypes": [],
                  "type": "Int",
                },
              ],
              "line": 2,
              "type": "Int",
            },
            "col": 16,
            "fullName": null,
            "line": 2,
            "name": null,
            "params": [],
            "returnType": "Int",
            "type": FuncType {
              "paramTypes": [],
              "returnType": "Int",
            },
          },
        ],
        "line": 1,
        "type": FuncType {
          "paramTypes": [],
          "returnType": "Int",
        },
      },
      "col": 12,
      "fullName": "foo$Int",
      "line": 1,
      "name": "foo",
      "params": [
        {
          "name": "a",
          "type": "Int",
        },
      ],
      "returnType": FuncType {
        "paramTypes": [],
        "returnType": "Int",
      },
      "type": FuncType {
        "paramTypes": [
          "Int",
        ],
        "returnType": FuncType {
          "paramTypes": [],
          "returnType": "Int",
        },
      },
    },
    DirectCall {
      "args": [],
      "caller": Call {
        "args": [
          Literal {
            "col": 16,
            "line": 7,
            "type": "Int",
            "value": "1",
          },
        ],
        "callerType": FuncType {
          "paramTypes": [
            "Int",
          ],
          "returnType": FuncType {
            "paramTypes": [],
            "returnType": "Int",
          },
        },
        "col": 12,
        "fullName": "foo$Int",
        "line": 7,
        "name": "foo",
        "referToByName": "full",
        "type": FuncType {
          "paramTypes": [],
          "returnType": "Int",
        },
      },
      "col": 12,
      "line": 7,
      "type": "Int",
    },
  ],
  "line": 1,
  "type": "Int",
}
`;

exports[`allow calling non-variable objects 4`] = `
"// PROGRAM //
(() => {
    function foo$Int(a) {
        return () => {
            return a;
        };
    };
    return (foo$Int(BigInt(1)))();
})()"
`;

exports[`compile arrays 1`] = `
Block {
  "col": 12,
  "expressions": [
    Array {
      "col": 12,
      "expressions": [
        Literal {
          "col": 13,
          "line": 1,
          "type": "Int",
          "value": "1",
        },
        Literal {
          "col": 16,
          "line": 1,
          "type": "Int",
          "value": "2",
        },
        Literal {
          "col": 19,
          "line": 1,
          "type": "Int",
          "value": "3",
        },
      ],
      "innerType": "Int",
      "line": 1,
      "type": ArrayType {
        "innerType": "Int",
      },
    },
  ],
  "line": 1,
  "type": ArrayType {
    "innerType": "Int",
  },
}
`;

exports[`compile arrays 2`] = `
"// PROGRAM //
(() => {
    return [BigInt(1), BigInt(2), BigInt(3)];
})()"
`;

exports[`compile arrays 3`] = `
Block {
  "col": 12,
  "expressions": [
    Array {
      "col": 12,
      "expressions": [
        Literal {
          "col": 13,
          "line": 1,
          "type": "Str",
          "value": ""1"",
        },
        Literal {
          "col": 18,
          "line": 1,
          "type": "Str",
          "value": ""2"",
        },
        Literal {
          "col": 23,
          "line": 1,
          "type": "Str",
          "value": ""3"",
        },
      ],
      "innerType": "Str",
      "line": 1,
      "type": ArrayType {
        "innerType": "Str",
      },
    },
  ],
  "line": 1,
  "type": ArrayType {
    "innerType": "Str",
  },
}
`;

exports[`compile arrays 4`] = `
"// PROGRAM //
(() => {
    return ["1", "2", "3"];
})()"
`;

exports[`compile arrays 5`] = `
Block {
  "col": 12,
  "expressions": [
    Binary {
      "col": 32,
      "left": Binary {
        "col": 20,
        "left": Array {
          "col": 12,
          "expressions": [],
          "innerType": "Int",
          "line": 1,
          "type": ArrayType {
            "innerType": "Int",
          },
        },
        "line": 1,
        "operator": "+",
        "right": Array {
          "col": 22,
          "expressions": [
            Literal {
              "col": 23,
              "line": 1,
              "type": "Int",
              "value": "1",
            },
            Literal {
              "col": 26,
              "line": 1,
              "type": "Int",
              "value": "2",
            },
            Literal {
              "col": 29,
              "line": 1,
              "type": "Int",
              "value": "3",
            },
          ],
          "innerType": "Int",
          "line": 1,
          "type": ArrayType {
            "innerType": "Int",
          },
        },
        "type": ArrayType {
          "innerType": "Int",
        },
      },
      "line": 1,
      "operator": "+",
      "right": Array {
        "col": 34,
        "expressions": [
          Literal {
            "col": 35,
            "line": 1,
            "type": "Int",
            "value": "1",
          },
        ],
        "innerType": "Int",
        "line": 1,
        "type": ArrayType {
          "innerType": "Int",
        },
      },
      "type": ArrayType {
        "innerType": "Int",
      },
    },
  ],
  "line": 1,
  "type": ArrayType {
    "innerType": "Int",
  },
}
`;

exports[`compile arrays 6`] = `
"// PROGRAM //
(() => {
    return [].concat([BigInt(1), BigInt(2), BigInt(3)]).concat([BigInt(1)]);
})()"
`;

exports[`compile array indexed access 1`] = `
Block {
  "col": 12,
  "expressions": [
    Assignment {
      "col": 12,
      "isDropped": true,
      "line": 1,
      "name": "x",
      "type": "Null",
      "value": Array {
        "col": 16,
        "expressions": [
          Literal {
            "col": 17,
            "line": 1,
            "type": "Int",
            "value": "1",
          },
          Literal {
            "col": 20,
            "line": 1,
            "type": "Int",
            "value": "2",
          },
          Literal {
            "col": 23,
            "line": 1,
            "type": "Int",
            "value": "3",
          },
        ],
        "innerType": "Int",
        "line": 1,
        "type": ArrayType {
          "innerType": "Int",
        },
      },
    },
    Call {
      "args": [
        Literal {
          "col": 14,
          "line": 2,
          "type": "Int",
          "value": "0",
        },
      ],
      "callerType": ArrayType {
        "innerType": "Int",
      },
      "col": 12,
      "fullName": "x$Int",
      "line": 2,
      "name": "x",
      "referToByName": "abbr",
      "type": "Int",
    },
  ],
  "line": 1,
  "type": "Int",
}
`;

exports[`compile array indexed access 2`] = `
"// PROGRAM //
(() => {
    let x;
    x = [BigInt(1), BigInt(2), BigInt(3)];
    return x[BigInt(0)];
})()"
`;

exports[`compile array indexed access 3`] = `
Block {
  "col": 12,
  "expressions": [
    Assignment {
      "col": 12,
      "isDropped": true,
      "line": 1,
      "name": "x",
      "type": "Null",
      "value": Array {
        "col": 16,
        "expressions": [
          Array {
            "col": 17,
            "expressions": [
              Literal {
                "col": 18,
                "line": 1,
                "type": "Int",
                "value": "1",
              },
              Literal {
                "col": 21,
                "line": 1,
                "type": "Int",
                "value": "2",
              },
            ],
            "innerType": "Int",
            "line": 1,
            "type": ArrayType {
              "innerType": "Int",
            },
          },
          Array {
            "col": 25,
            "expressions": [
              Literal {
                "col": 26,
                "line": 1,
                "type": "Int",
                "value": "3",
              },
              Literal {
                "col": 29,
                "line": 1,
                "type": "Int",
                "value": "4",
              },
            ],
            "innerType": "Int",
            "line": 1,
            "type": ArrayType {
              "innerType": "Int",
            },
          },
        ],
        "innerType": ArrayType {
          "innerType": "Int",
        },
        "line": 1,
        "type": ArrayType {
          "innerType": ArrayType {
            "innerType": "Int",
          },
        },
      },
    },
    Call {
      "args": [
        Literal {
          "col": 14,
          "line": 2,
          "type": "Int",
          "value": "0",
        },
        Literal {
          "col": 17,
          "line": 2,
          "type": "Int",
          "value": "1",
        },
      ],
      "callerType": ArrayType {
        "innerType": ArrayType {
          "innerType": "Int",
        },
      },
      "col": 12,
      "fullName": "x$Int$Int",
      "line": 2,
      "name": "x",
      "referToByName": "abbr",
      "type": ArrayType {
        "innerType": "Int",
      },
    },
  ],
  "line": 1,
  "type": ArrayType {
    "innerType": "Int",
  },
}
`;

exports[`compile array indexed access 4`] = `
"// PROGRAM //
(() => {
    let x;
    x = [[BigInt(1), BigInt(2)], [BigInt(3), BigInt(4)]];
    return x[BigInt(0)][BigInt(1)];
})()"
`;

exports[`compile array indexed access 5`] = `
Block {
  "col": 12,
  "expressions": [
    DirectCall {
      "args": [
        Literal {
          "col": 22,
          "line": 1,
          "type": "Int",
          "value": "0",
        },
      ],
      "caller": Array {
        "col": 12,
        "expressions": [
          Literal {
            "col": 13,
            "line": 1,
            "type": "Int",
            "value": "1",
          },
          Literal {
            "col": 16,
            "line": 1,
            "type": "Int",
            "value": "2",
          },
          Literal {
            "col": 19,
            "line": 1,
            "type": "Int",
            "value": "3",
          },
        ],
        "innerType": "Int",
        "line": 1,
        "type": ArrayType {
          "innerType": "Int",
        },
      },
      "col": 12,
      "line": 1,
      "type": "Int",
    },
  ],
  "line": 1,
  "type": "Int",
}
`;

exports[`compile array indexed access 6`] = `
"// PROGRAM //
(() => {
    return ([BigInt(1), BigInt(2), BigInt(3)])[BigInt(0)];
})()"
`;

exports[`compile array indexed access 7`] = `
Block {
  "col": 12,
  "expressions": [
    DirectCall {
      "args": [
        Literal {
          "col": 29,
          "line": 1,
          "type": "Int",
          "value": "0",
        },
        Literal {
          "col": 32,
          "line": 1,
          "type": "Int",
          "value": "1",
        },
      ],
      "caller": Array {
        "col": 12,
        "expressions": [
          Array {
            "col": 13,
            "expressions": [
              Literal {
                "col": 14,
                "line": 1,
                "type": "Int",
                "value": "1",
              },
              Literal {
                "col": 17,
                "line": 1,
                "type": "Int",
                "value": "2",
              },
            ],
            "innerType": "Int",
            "line": 1,
            "type": ArrayType {
              "innerType": "Int",
            },
          },
          Array {
            "col": 21,
            "expressions": [
              Literal {
                "col": 22,
                "line": 1,
                "type": "Int",
                "value": "3",
              },
              Literal {
                "col": 25,
                "line": 1,
                "type": "Int",
                "value": "4",
              },
            ],
            "innerType": "Int",
            "line": 1,
            "type": ArrayType {
              "innerType": "Int",
            },
          },
        ],
        "innerType": ArrayType {
          "innerType": "Int",
        },
        "line": 1,
        "type": ArrayType {
          "innerType": ArrayType {
            "innerType": "Int",
          },
        },
      },
      "col": 12,
      "line": 1,
      "type": ArrayType {
        "innerType": "Int",
      },
    },
  ],
  "line": 1,
  "type": ArrayType {
    "innerType": "Int",
  },
}
`;

exports[`compile array indexed access 8`] = `
"// PROGRAM //
(() => {
    return ([[BigInt(1), BigInt(2)], [BigInt(3), BigInt(4)]])[BigInt(0)][BigInt(1)];
})()"
`;
